// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design Systems/Button Inverse 1`] = `
<button
  className="sc-AxirZ cNnLFY"
  onClick={[Function]}
  style={Object {}}
>
  <p
    className="sc-AxhUy vsUGv"
    style={Object {}}
  >
    Button
  </p>
</button>
`;

exports[`Storyshots Design Systems/Button Large 1`] = `
<button
  className="sc-AxirZ dExmxL"
  onClick={[Function]}
  size="large"
  style={Object {}}
>
  <p
    className="sc-AxhUy vsUGv"
    style={Object {}}
  >
    Button
  </p>
</button>
`;

exports[`Storyshots Design Systems/Button Medium 1`] = `
<button
  className="sc-AxirZ hWWebX"
  onClick={[Function]}
  size="medium"
  style={Object {}}
>
  <p
    className="sc-AxhUy vsUGv"
    style={Object {}}
  >
    Button
  </p>
</button>
`;

exports[`Storyshots Design Systems/Button Small 1`] = `
<button
  className="sc-AxirZ gQWyCq"
  onClick={[Function]}
  size="small"
  style={Object {}}
>
  <p
    className="sc-AxhUy vsUGv"
    style={Object {}}
  >
    Button
  </p>
</button>
`;

exports[`Storyshots Design Systems/Button/Cookie Button Base 1`] = `
<div
  className="sc-AxjAm emnWxD"
  style={Object {}}
>
  <button
    className="sc-AxirZ gohgme sc-fzozJi iOrtLq normal"
    onClick={[Function]}
    style={Object {}}
  >
    <p
      className="sc-AxhUy vsUGv"
      style={Object {}}
    >
      Save Settings
    </p>
  </button>
</div>
`;

exports[`Storyshots Design Systems/Button/Cookie Button Inverse 1`] = `
<div
  className="sc-AxjAm emnWxD"
  style={Object {}}
>
  <button
    className="sc-AxirZ gohgme sc-fzozJi iOrtLq inverse"
    onClick={[Function]}
    style={Object {}}
  >
    <p
      className="sc-AxhUy vsUGv"
      style={Object {}}
    >
      Cookie Preferences
    </p>
  </button>
</div>
`;

exports[`Storyshots Design Systems/Button/Globe Button Base 1`] = `
<button
  className="sc-AxirZ gohgme sc-fzoLsD cOrIpp"
  onClick={[Function]}
  style={Object {}}
>
  <div
    className="sc-AxjAm hyNcgC sc-fzplWN bcoWYt"
    style={Object {}}
  >
    <div
      className="sc-AxiKw cQwZvr sc-fzpans bVVCfM"
      style={Object {}}
    >
      <svg
        viewBox="0 0 16 16"
      >
        <path
          d="m8.002.25a7.77 7.77 0 0 1 7.748 7.776 7.75 7.75 0 0 1 -7.521 7.72l-.246.004a7.75 7.75 0 0 1 -7.73-7.513l-.003-.245a7.75 7.75 0 0 1 7.752-7.742zm1.949 8.5h-3.903c.155 2.897 1.176 5.343 1.886 5.493l.068.007c.68-.002 1.72-2.365 1.932-5.23zm4.255 0h-2.752c-.091 1.96-.53 3.783-1.188 5.076a6.257 6.257 0 0 0 3.905-4.829zm-9.661 0h-2.75a6.257 6.257 0 0 0 3.934 5.075c-.615-1.208-1.036-2.875-1.162-4.686l-.022-.39zm1.188-6.576-.115.046a6.257 6.257 0 0 0 -3.823 5.03h2.75c.085-1.83.471-3.54 1.059-4.81zm2.262-.424c-.702.002-1.784 2.512-1.947 5.5h3.904c-.156-2.903-1.178-5.343-1.892-5.494l-.065-.007zm2.28.432.023.05c.643 1.288 1.069 3.084 1.157 5.018h2.748a6.275 6.275 0 0 0 -3.929-5.068z"
        />
      </svg>
    </div>
    <div
      className="sc-AxiKw bzYuei sc-fzpans bVVCfM"
      style={Object {}}
    >
      <svg
        viewBox="0 0 256 256"
      >
        <g>
          <g>
            <polygon
              points="225.813,48.907 128,146.72 30.187,48.907 0,79.093 128,207.093 256,79.093 		"
            />
          </g>
        </g>
      </svg>
    </div>
  </div>
</button>
`;

exports[`Storyshots Design Systems/Button/Menu Button Base 1`] = `
<button
  className="sc-AxirZ gohgme sc-fznyAO iZtzaS"
  onClick={[Function]}
  style={Object {}}
>
  <div
    className="sc-AxjAm hyNcgC sc-fznKkj ebJJPw"
    style={Object {}}
  >
    <div
      className="sc-AxiKw lnZkSe sc-fznZeY bZjQJg"
      style={Object {}}
    >
      <svg
        viewBox="0 0 448 512"
      >
        <path
          d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z"
        />
      </svg>
    </div>
    <div
      className="sc-AxiKw kfGogn sc-fznZeY bZjQJg"
      style={Object {}}
    >
      <svg
        viewBox="0 0 32 32"
      >
        <path
          d="m16 .7c-8.437 0-15.3 6.863-15.3 15.3s6.863 15.3 15.3 15.3 15.3-6.863 15.3-15.3-6.863-15.3-15.3-15.3zm0 28c-4.021 0-7.605-1.884-9.933-4.81a12.425 12.425 0 0 1 6.451-4.4 6.507 6.507 0 0 1 -3.018-5.49c0-3.584 2.916-6.5 6.5-6.5s6.5 2.916 6.5 6.5a6.513 6.513 0 0 1 -3.019 5.491 12.42 12.42 0 0 1 6.452 4.4c-2.328 2.925-5.912 4.809-9.933 4.809z"
        />
      </svg>
    </div>
  </div>
</button>
`;

exports[`Storyshots Design Systems/Button/Search Button Base 1`] = `
<button
  className="sc-AxirZ gohgme sc-AxgMl ffnbCP"
  onClick={[Function]}
  style={Object {}}
>
  <div
    className="sc-AxjAm hyNcgC sc-AxheI JGUfr"
    style={Object {}}
  >
    <div
      className="sc-AxiKw goejwU sc-Axmtr bFeZIB"
      style={Object {}}
    >
      <svg
        viewBox="0 0 56.966 56.966"
      >
        <path
          d="M55.146,51.887L41.588,37.786c3.486-4.144,5.396-9.358,5.396-14.786c0-12.682-10.318-23-23-23s-23,10.318-23,23 s10.318,23,23,23c4.761,0,9.298-1.436,13.177-4.162l13.661,14.208c0.571,0.593,1.339,0.92,2.162,0.92 c0.779,0,1.518-0.297,2.079-0.837C56.255,54.982,56.293,53.08,55.146,51.887z M23.984,6c9.374,0,17,7.626,17,17s-7.626,17-17,17 s-17-7.626-17-17S14.61,6,23.984,6z"
        />
      </svg>
    </div>
    <p
      className="sc-AxhUy vsUGv sc-AxmLO cyibMK"
      style={Object {}}
    >
      Search
    </p>
  </div>
</button>
`;

exports[`Storyshots Design Systems/Card/Dark Large 1`] = `
<div
  className="sc-AxjAm jypzoh"
  style={Object {}}
>
  <div
    className="sc-AxjAm hyNcgC sc-fzokOt iojPmO"
    style={Object {}}
  >
    <div
      className="sc-AxjAm hyNcgC sc-fzqBZW gIodXL"
      style={Object {}}
    >
      <img
        alt="card-image"
        className="sc-AxhCb daRQi"
        src="darkcard-sm.png"
      />
    </div>
    <div
      className="sc-AxjAm hyNcgC sc-fzqNJr crcRSx large"
      style={Object {}}
    >
      <p
        className="sc-AxhUy gxsYhh"
        style={Object {}}
      >
        Fruits de mer with Michelin chef Marc Favier
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design Systems/Card/Dark Medium 1`] = `
<div
  className="sc-AxjAm iQkBjj"
  style={Object {}}
>
  <div
    className="sc-AxjAm hyNcgC sc-fzokOt iojPmO"
    style={Object {}}
  >
    <div
      className="sc-AxjAm hyNcgC sc-fzqBZW gIodXL"
      style={Object {}}
    >
      <img
        alt="card-image"
        className="sc-AxhCb daRQi"
        src="darkcard-sm.png"
      />
    </div>
    <div
      className="sc-AxjAm hyNcgC sc-fzqNJr crcRSx normal"
      style={Object {}}
    >
      <p
        className="sc-AxhUy gxsYhh"
        style={Object {}}
      >
        Fruits de mer with Michelin chef Marc Favier
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design Systems/Card/Dark Small 1`] = `
<div
  className="sc-AxjAm eeyQCz"
  style={Object {}}
>
  <div
    className="sc-AxjAm hyNcgC sc-fzokOt iojPmO"
    style={Object {}}
  >
    <div
      className="sc-AxjAm hyNcgC sc-fzqBZW gIodXL"
      style={Object {}}
    >
      <img
        alt="card-image"
        className="sc-AxhCb daRQi"
        src="darkcard-sm.png"
      />
    </div>
    <div
      className="sc-AxjAm hyNcgC sc-fzqNJr crcRSx normal"
      style={Object {}}
    >
      <p
        className="sc-AxhUy gxsYhh"
        style={Object {}}
      >
        Fruits de mer with Michelin chef Marc Favier
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design Systems/Card/Light Base 1`] = `
<div
  className="sc-AxjAm iQkBjj"
  style={Object {}}
>
  <div
    className="sc-AxjAm hyNcgC sc-fzokOt bIXlJm"
    style={Object {}}
  >
    <div
      className="sc-AxjAm hyNcgC sc-fzqBZW gIodXL"
      style={Object {}}
    >
      <img
        alt="card-image"
        className="sc-AxhCb daRQi"
        src="card1.jpg"
      />
    </div>
    <div
      className="sc-AxjAm hyNcgC sc-fzqNJr crcRSx normal"
      style={Object {}}
    >
      <p
        className="sc-AxhUy cXHHIS"
        style={Object {}}
      >
        Online experiences
      </p>
      <p
        className="sc-AxhUy fiHroI"
        style={Object {}}
      >
        Unique activities we can do together, led by a world of hosts
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design Systems/Card/Light Multiple 1`] = `
<div
  className="sc-AxjAm hAFOia"
  style={Object {}}
>
  <div
    className="sc-AxjAm hyNcgC sc-fzokOt bIXlJm"
    style={Object {}}
  >
    <div
      className="sc-AxjAm hyNcgC sc-fzqBZW gIodXL"
      style={Object {}}
    >
      <img
        alt="card-image"
        className="sc-AxhCb daRQi"
        src="card1.jpg"
      />
    </div>
    <div
      className="sc-AxjAm hyNcgC sc-fzqNJr crcRSx normal"
      style={Object {}}
    >
      <p
        className="sc-AxhUy fiHroI"
        style={Object {}}
      >
        Unique activities we can do together, led by a world of hosts
      </p>
    </div>
  </div>
  <div
    className="sc-AxjAm hyNcgC sc-fzokOt bIXlJm"
    style={Object {}}
  >
    <div
      className="sc-AxjAm hyNcgC sc-fzqBZW gIodXL"
      style={Object {}}
    >
      <img
        alt="card-image"
        className="sc-AxhCb daRQi"
        src="card1.jpg"
      />
    </div>
    <div
      className="sc-AxjAm hyNcgC sc-fzqNJr crcRSx normal"
      style={Object {}}
    >
      <p
        className="sc-AxhUy fiHroI"
        style={Object {}}
      >
        Unique activities we can do together, led by a world of hosts
      </p>
    </div>
  </div>
  <div
    className="sc-AxjAm hyNcgC sc-fzokOt bIXlJm"
    style={Object {}}
  >
    <div
      className="sc-AxjAm hyNcgC sc-fzqBZW gIodXL"
      style={Object {}}
    >
      <img
        alt="card-image"
        className="sc-AxhCb daRQi"
        src="card1.jpg"
      />
    </div>
    <div
      className="sc-AxjAm hyNcgC sc-fzqNJr crcRSx normal"
      style={Object {}}
    >
      <p
        className="sc-AxhUy fiHroI"
        style={Object {}}
      >
        Unique activities we can do together, led by a world of hosts
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design Systems/Card/Light No Title 1`] = `
<div
  className="sc-AxjAm iQkBjj"
  style={Object {}}
>
  <div
    className="sc-AxjAm hyNcgC sc-fzokOt bIXlJm"
    style={Object {}}
  >
    <div
      className="sc-AxjAm hyNcgC sc-fzqBZW gIodXL"
      style={Object {}}
    >
      <img
        alt="card-image"
        className="sc-AxhCb daRQi"
        src="card1.jpg"
      />
    </div>
    <div
      className="sc-AxjAm hyNcgC sc-fzqNJr crcRSx normal"
      style={Object {}}
    >
      <p
        className="sc-AxhUy fiHroI"
        style={Object {}}
      >
        Unique activities we can do together, led by a world of hosts
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design Systems/Card/Section Black Lives Matter 1`] = `
<div
  className="sc-AxjAm hyNcgC sc-fzoyAV blpVPj"
  style={Object {}}
>
  <div
    className="sc-AxjAm hyNcgC sc-fzoLag cmHoju"
    style={Object {}}
  >
    <div
      className="sc-AxjAm hyNcgC sc-fzoXzr lfKW"
      style={Object {}}
    >
      <p
        className="sc-AxhUy vsUGv sc-fzpjYC kVblru"
        style={Object {}}
      >
        We stand with #BlackLivesMatter
      </p>
      <p
        className="sc-AxhUy vsUGv sc-fznxsB TTUXp"
        style={Object {}}
      >
        We believe in a world where everyone belongs. We reject all racism that stands in the way.
      </p>
      <p
        className="sc-AxhUy vsUGv sc-fznJRM eJquNt"
        style={Object {}}
      >
        Donate
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design Systems/Notification/Cookie Notification Base 1`] = `
<div
  className="sc-AxjAm kEoNHJ"
  style={Object {}}
>
  <div
    className="sc-AxjAm hyNcgC sc-fznzOf ghBRDV"
    style={Object {}}
  >
    <div
      className="sc-AxjAm hyNcgC sc-fznMnq kYauKO"
      style={Object {}}
    >
      <div
        className="sc-AxjAm kBDirS sc-fzomME ldlIyn"
        style={Object {}}
      >
        <div
          className="sc-AxjAm hyNcgC sc-fzoant htPhAA"
          style={Object {}}
        >
          <p
            className="sc-AxhUy vsUGv sc-fzoydu cciBTv"
            style={Object {}}
          >
            Your Privacy
          </p>
          <div
            className="sc-AxiKw goejwU sc-fzqAbL cpHFaL"
            style={Object {}}
          >
            <svg
              viewBox="0 0 448 512"
            >
              <path
                d="M400 224h-24v-72C376 68.2 307.8 0 224 0S72 68.2 72 152v72H48c-26.5 0-48 21.5-48 48v192c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V272c0-26.5-21.5-48-48-48zm-104 0H152v-72c0-39.7 32.3-72 72-72s72 32.3 72 72v72z"
              />
            </svg>
          </div>
        </div>
        <p
          className="sc-AxhUy vsUGv sc-fzoJMP dVbhQQ"
          style={Object {}}
        >
          We use cookies to help personalize content, tailor and measure ads, and provide a safer experience. By navigating the site, you agree to the use of cookies to collect information on and off Airbnb. Read our Cookie Policy to learn more or go to Cookie Preferences to manage your settings
        </p>
      </div>
      <div
        className="sc-AxjAm bdDgBS sc-fzomME ldlIyn"
        style={Object {}}
      >
        <div
          className="sc-AxjAm hyNcgC sc-fzqMAW jlOAuf"
          style={Object {}}
        >
          <button
            className="sc-AxirZ gohgme sc-fzozJi iOrtLq normal"
            onClick={[Function]}
            style={Object {}}
          >
            <p
              className="sc-AxhUy vsUGv"
              style={Object {}}
            >
              Save Settings
            </p>
          </button>
          <button
            className="sc-AxirZ gohgme sc-fzozJi iOrtLq inverse"
            onClick={[Function]}
            style={Object {}}
          >
            <p
              className="sc-AxhUy vsUGv"
              style={Object {}}
            >
              Cookie Preferences
            </p>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design Systems/SearchBar Medium 1`] = `
<div
  className="sc-AxjAm emteCl"
  style={Object {}}
>
  <div
    className="sc-AxjAm hyNcgC sc-fzqPZZ iFLnFW"
    style={Object {}}
  >
    <div
      className="sc-AxjAm hyNcgC sc-fzpkJw bxTymk"
      style={Object {}}
    >
      <p
        className="sc-AxhUy vsUGv sc-fzoxKX gWzCxi"
        style={Object {}}
      >
        Start your search
      </p>
      <div
        className="sc-AxjAm hyNcgC sc-fzoKki dRMBeU"
        style={Object {}}
      >
        <div
          className="sc-AxiKw goejwU sc-fzoYkl eRSyIe"
          style={Object {}}
        >
          <svg
            viewBox="0 0 56.966 56.966"
          >
            <path
              d="M55.146,51.887L41.588,37.786c3.486-4.144,5.396-9.358,5.396-14.786c0-12.682-10.318-23-23-23s-23,10.318-23,23 s10.318,23,23,23c4.761,0,9.298-1.436,13.177-4.162l13.661,14.208c0.571,0.593,1.339,0.92,2.162,0.92 c0.779,0,1.518-0.297,2.079-0.837C56.255,54.982,56.293,53.08,55.146,51.887z M23.984,6c9.374,0,17,7.626,17,17s-7.626,17-17,17 s-17-7.626-17-17S14.61,6,23.984,6z"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design Systems/SearchBar Small 1`] = `
<div
  className="sc-AxjAm zmAEV"
  style={Object {}}
>
  <button
    className="sc-AxirZ gohgme sc-fznMAR jPRPdm"
    onClick={[Function]}
    style={Object {}}
  >
    <div
      className="sc-AxjAm hyNcgC sc-fznWOq eJcXnf"
      style={Object {}}
    >
      <div
        className="sc-AxiKw goejwU sc-fzolEj cWXjnI"
        style={Object {}}
      >
        <svg
          viewBox="0 0 56.966 56.966"
        >
          <path
            d="M55.146,51.887L41.588,37.786c3.486-4.144,5.396-9.358,5.396-14.786c0-12.682-10.318-23-23-23s-23,10.318-23,23 s10.318,23,23,23c4.761,0,9.298-1.436,13.177-4.162l13.661,14.208c0.571,0.593,1.339,0.92,2.162,0.92 c0.779,0,1.518-0.297,2.079-0.837C56.255,54.982,56.293,53.08,55.146,51.887z M23.984,6c9.374,0,17,7.626,17,17s-7.626,17-17,17 s-17-7.626-17-17S14.61,6,23.984,6z"
          />
        </svg>
      </div>
      <p
        className="sc-AxhUy vsUGv sc-fzqBkg hMEAbA"
        style={Object {}}
      >
        Where are you going?
      </p>
    </div>
  </button>
</div>
`;
